--- a/lab_3/app/public/index.html
+++ b/lab_3/app/public/index.html
@@ -45,7 +45,7 @@
         <p class="lead">
           You have successfully deployed to Azure Web Apps using GitHub Actions!
         </p>
-            <img id="octodex" src="https://octodex.github.com/vinyltocat" class="" alt="Vinyltocat" />
+            <img id="octodex" src="https://octodex.github.com/images/vinyltocat.png" class="" alt="Vinyltocat" />
         </p>
         </p>
       </div>
